Add checkout and list files steps to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,9 @@ jobs:
       steps:
        - name: print hello in first workflow
          run: echo "Hello in first work flow by ahmed Ibrahim"
+
+       - name: Checkout
+         uses: actions/checkout@v6.0.2
+
+       - name: list of repository fils
+         run: ls -la
