--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       - name: Run Tests
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpstan
 
       - name: تثبيت المكتبات
         run: |
