--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       - name: Run Tests
-        run: vendor/bin/phpstan
+        run: vendor/bin/phpstan analyse app/Http/Controllers
+
 
       - name: تثبيت المكتبات
         run: |
